package model;

public interface GradingStrategy {
    double calculateGrade(double pointsEarned, double maxPoints);
}
