package model;
public interface SubmissionGrader {
    void gradeSubmission(Submission submission, double pointsEarned);
}
